force-app/main/default/objects/Person__x/Person__x.object-meta.xml
<CustomObject>
    <description>Person</description>
    <externalDataSource>xDM</externalDataSource>
    <externalName>Person</externalName>
    <label>Person</label>
    <pluralLabel>Person</pluralLabel>
</CustomObject>