force-app/main/default/objects/Person__x/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact</description>
    <externalDeveloperName>Contact</externalDeveloperName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>