force-app/main/default/objects/Person__x/fields/EnrichedPrimaryEmail__c.field-meta.xml
<CustomField>
    <fullName>EnrichedPrimaryEmail__c</fullName>
    <description>EnrichedPrimaryEmail</description>
    <externalDeveloperName>EnrichedPrimaryEmail</externalDeveloperName>
    <label>EnrichedPrimaryEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>