force-app/main/default/objects/Person__x/fields/EnrichedPrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>EnrichedPrimaryPhone__c</fullName>
    <description>EnrichedPrimaryPhone</description>
    <externalDeveloperName>EnrichedPrimaryPhone</externalDeveloperName>
    <label>EnrichedPrimaryPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>