force-app/main/default/objects/Person__x/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>FirstName</description>
    <externalDeveloperName>FirstName</externalDeveloperName>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>