force-app/main/default/objects/Person__x/fields/FullPersonName__c.field-meta.xml
<CustomField>
    <fullName>FullPersonName__c</fullName>
    <description>FullPersonName</description>
    <externalDeveloperName>FullPersonName</externalDeveloperName>
    <label>FullPersonName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>