force-app/main/default/objects/Person__x/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual</description>
    <externalDeveloperName>Individual</externalDeveloperName>
    <label>Individual</label>
    <referenceTo>Individual</referenceTo>
    <relationshipName>Individual</relationshipName>
    <type>Lookup</type>
</CustomField>