force-app/main/default/objects/Person__x/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>LastName</description>
    <externalDeveloperName>LastName</externalDeveloperName>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>