force-app/main/default/objects/Person__x/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>MiddleName</description>
    <externalDeveloperName>MiddleName</externalDeveloperName>
    <label>MiddleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>