force-app/main/default/objects/Person__x/fields/MPA_FormattedAddress__c.field-meta.xml
<CustomField>
    <fullName>MPA_FormattedAddress__c</fullName>
    <description>MPA_FormattedAddress</description>
    <externalDeveloperName>MPA_FormattedAddress</externalDeveloperName>
    <label>MPA_FormattedAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>