force-app/main/default/objects/Person__x/fields/MPA_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>MPA_PostalCode__c</fullName>
    <description>MPA_PostalCode</description>
    <externalDeveloperName>MPA_PostalCode</externalDeveloperName>
    <label>MPA_PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>